<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Wind Speed</string>
    <string name="title">Wind Speed</string>
    <string name="cero">0</string>
    <string name="cerocero">00</string>
    <string name="point">.</string>
    <string name="unit">Knots</string>
    <string name="action_settings">Settings</string>
    <string name="level">00.0</string>

</resources>
