<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:textColor="#FF0000"
        android:text="@string/title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/fraction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/point"
        android:layout_alignBottom="@+id/point"
        android:layout_toRightOf="@+id/point"
        android:text="@string/cero"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="80sp" />

    <TextView
        android:id="@+id/point"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/decimal"
        android:layout_alignBottom="@+id/decimal"
        android:layout_centerHorizontal="true"
        android:text="@string/point"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="80sp" />

    <TextView
        android:id="@+id/decimal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_marginTop="72dp"
        android:layout_toLeftOf="@+id/point"
        android:text="@string/cerocero"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="80sp" />

    <TextView
        android:id="@+id/unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/fraction"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="16dp"
        android:layout_toRightOf="@+id/title"
        android:text="@string/unit"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>
