<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

        <TextView
            android:id="@+id/windTextView"
            android:layout_width="107dp"
            android:layout_height="wrap_content"
            
            android:gravity="right"
            android:text="@string/cero"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="80sp"
            android:typeface="monospace" />

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="26dp"
            android:layout_height="wrap_content"
            
            android:gravity="center_horizontal"
            android:text="@string/point"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="80sp"
            android:typeface="monospace" />

        <TextView
            android:id="@+id/windFractionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            
            android:text="@string/cero"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="80sp"
            android:typeface="monospace" />

        <TextView
            android:id="@+id/unitView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            
            android:text="@string/unit"
        
            android:textSize="20sp"
            android:typeface="monospace" />
    

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        android:text="@string/title"
        />

</RelativeLayout>